--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ocaml": "~4.10.0"
   },
   "devDependencies": {
+    "@opam/ocaml-lsp-server": "*",
     "@opam/merlin": "*",
     "@reason-native/rely": "*",
     "refmterr": "*",
