--- a/lib/dune
+++ b/lib/dune
@@ -3,4 +3,6 @@
  (flags
   (-w -40 -w +26))
  (public_name hello-reason)
- (libraries pastel.lib))
+ (libraries pastel.lib)
+ (preprocess
+  (pps ppx_deriving.show ppx_deriving.ord)))
