add ligo to devcontainer

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -15,3 +15,7 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
 
 # [Optional] Uncomment if you want to install more global node modules
 RUN su node -c "sudo npm install -g --unsafe-perm esy"
+
+# Install LIGO
+COPY tools/* /tmp/tools/
+RUN chmod +x /tmp/tools/ligo && sudo cp /tmp/tools/ligo /usr/local/bin
