--- a/lib/dune
+++ b/lib/dune
@@ -1,7 +1,8 @@
 (library
  (name lib)
  (flags
-  (-w -40 -w +26))
+  (-w -40 -w +26)
+  -rectypes)
  (public_name hello-reason)
  (libraries pastel.lib)
  (preprocess
